--- a/_layouts/extra.html
+++ b/_layouts/extra.html
@@ -15,9 +15,9 @@
 		<div class="navbar-inner">
 			<a class="brand" href="#"></a>
 			<ul class="nav">
-				<li class="active"><a href="/">{{ site.name }}</a></li>
+				<li><a href="/">{{ site.name }}</a></li>
 				<li><a href="#">Sign in</a></li>
-				<li><a href="/about.html">About</a></li>
+				<li class="active"><a href="/about.html">About</a></li>
 			</ul>
 		</div>
 	</div>
@@ -38,12 +38,3 @@
 			  
 </body>
 </html>
-
-
-
-
-
-
-
-
-
