--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,9 +5,9 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<title>{{ page.title }}</title>
 	<meta name="viewport" content="width=device-width">
-	<link rel="stylesheet" href="/bootstrap/css/bootstrap.css">
-	<link rel="stylesheet" href="/css/flat-ui.css">
-	<link rel="stylesheet" href="/css/styles.css">
+	<link rel="stylesheet" href="{{ site.baseurl}}/bootstrap/css/bootstrap.css">
+	<link rel="stylesheet" href="{{ site.baseurl}}/css/flat-ui.css">
+	<link rel="stylesheet" href="{{ site.baseurl}}/css/styles.css">
 </head>
 <body>
 
@@ -15,9 +15,9 @@
 		<div class="navbar-inner">
 			<a class="brand" href="#"></a>
 			<ul class="nav">
-				<li class="active"><a href="/">{{ site.name }}</a></li>
-				<li><a href="#">Sign in</a></li>
-				<li><a href="/about.html">About</a></li>
+				<li class="active"><a href="{{ site.baseurl}}/">{{ site.name }}</a></li>
+				<li><a href="#">Log in</a></li>
+				<li><a href="{{ site.baseurl}}/about.html">About</a></li>
 			</ul>
 		</div>
 	</div>
